force-app/main/default/objects/Log__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <type>TextArea</type>
</CustomField>